[KARAF-5690] Add module read from java.xml to java.logging